[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/yellow-point.png" type="Texture" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://effects/Firework.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 1.38729e-43, 1.5134e-43 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.431373 )

[node name="Firework" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
amount = 500
lifetime = 2.0
explosiveness = 0.5
texture = ExtResource( 1 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 200 )
initial_velocity = 300.0
initial_velocity_random = 0.38
damping = 28.11
scale_amount = 2.0
scale_amount_random = 0.42
color_ramp = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 92.1503 )
scale = Vector2( 9.59354, 9.59354 )
texture = ExtResource( 2 )
color = Color( 0.501961, 0.482353, 0.231373, 0.254902 )
mode = 2
range_height = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
